updated index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Iqra_site
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <meta content="text/html; charset=ISO-8859-1"
+ http-equiv="content-type">
+  <title>index.html</title>
+</head>
+<body>
+<div style="text-align: center;"><big><big><big>&#1576;&#1587;&#1605; &#1575;&#1604;&#1604;&#1607; &#1575;&#1604;&#1585;&#1581;&#1605;&#1606; &#1575;&#1604;&#1585;&#1581;&#1610;&#1605;<br>
+<small style="font-style: italic;"><small><small>Bismillah hir-Rahman
+nir-Rahim&nbsp;<br>
+In the name of Allah, the beneficent the merciful</small></small></small></big></big></big></div>
+</body>
+</html>
